--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <section>
     <div class="bgvideo">
-      <video src="sourse/files/icon/video.mov" type="video/mov" autoplay muted loop></video>
+      <video src="sourse/files/icon/video.mp4" type="video/mp4" autoplay muted loop></video>
       <div class="effect"></div>
       <div class="video-text">
         <h1>Future's here</h1>
